Using search with paging and add hateos in paging